:lipstick: - style: fix hard to read text on secondary button in dark mode

--- a/src/style/tokens/dark.scss
+++ b/src/style/tokens/dark.scss
@@ -19,6 +19,8 @@
   --button-color-text-outline: #f3f3f3;
   --button-color-text-primary: #313741;
 
+  --button-color-text-secondary: #313741;
+
   --button-color-background-outline-hover: #f3f3f3;
   --button-color-background-outline-active: #f3f3f3;
   --button-color-text-outline-active: #313741;
